--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -23,16 +23,16 @@
 201295312.01 & $0.04$ &  Y & $1.4\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.17$ & $1.4\times10^{-4}$ & Candidate\tablenotemark{a}  \\
 201338508.01 & $0.63$ &  - & $< 10^{-4}$ & $2.9\times10^{-3}$ & $< 10^{-4}$ & $0.22$ & $2.9\times10^{-3}$ & Planet  \\
 201338508.02 & $0.33$ &  - & $< 10^{-4}$ & $1.7\times10^{-4}$ & $< 10^{-4}$ & $0.22$ & $1.7\times10^{-4}$ & Planet  \\
-201367065.01 & $0.15$ &  - & $< 10^{-4}$ & $1.1\times10^{-4}$ & $< 10^{-4}$ & $0.22$ & $1.1\times10^{-4}$ & Planet\tablenotemark{c}  \\
-201367065.02 & $0.67$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Planet\tablenotemark{c}  \\
+201367065.01 & $0.15$ &  - & $< 10^{-4}$ & $1.1\times10^{-4}$ & $< 10^{-4}$ & $0.22$ & $1.1\times10^{-4}$ & Planet\tablenotemark{b}  \\
+201367065.02 & $0.67$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Planet\tablenotemark{b}  \\
 201384232.01 & $0.44$ &  - & $8.4\times10^{-3}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.07$ & $8.5\times10^{-3}$ & Planet  \\
 201393098.01 & $0.52$ &  - & $< 10^{-4}$ & $1.1\times10^{-3}$ & $< 10^{-4}$ & $0.05$ & $1.1\times10^{-3}$ & Planet  \\
 201403446.01 & $0.18$ &  Y & $4.8\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.19$ & $4.9\times10^{-4}$ & Candidate\tablenotemark{a}  \\
 201445392.01 & $0.26$ &  - & $< 10^{-4}$ & $2.1\times10^{-3}$ & $< 10^{-4}$ & $0.18$ & $2.1\times10^{-3}$ & Planet  \\
 201445392.02 & $0.18$ &  - & $< 10^{-4}$ & $0.019$ & $< 10^{-4}$ & $0.21$ & $0.019$ & Candidate  \\
 201465501.01 & $0.68$ &  - & $< 10^{-4}$ & $5.8\times10^{-3}$ & $< 10^{-4}$ & $0.21$ & $5.8\times10^{-3}$ & Planet  \\
-201505350.01 & $2.69$ &  - & $< 10^{-4}$ & $5.6\times10^{-3}$ & $< 10^{-4}$ & $0.04$ & $5.6\times10^{-3}$ & Planet\tablenotemark{d}  \\
-201505350.02 & $0.70$ &  - & $< 10^{-4}$ & $1.6\times10^{-4}$ & $< 10^{-4}$ & $0.07$ & $1.7\times10^{-4}$ & Planet\tablenotemark{d}  \\
+201505350.01 & $2.69$ &  - & $< 10^{-4}$ & $5.6\times10^{-3}$ & $< 10^{-4}$ & $0.04$ & $5.6\times10^{-3}$ & Planet\tablenotemark{c}  \\
+201505350.02 & $0.70$ &  - & $< 10^{-4}$ & $1.6\times10^{-4}$ & $< 10^{-4}$ & $0.07$ & $1.7\times10^{-4}$ & Planet\tablenotemark{c}  \\
 201546283.01 & $0.15$ &  - & $7.0\times10^{-4}$ & $2.6\times10^{-4}$ & $< 10^{-4}$ & $0.00$ & $9.6\times10^{-4}$ & Candidate\tablenotemark{a}  \\
 201549860.01 & $0.18$ &  - & $< 10^{-4}$ & $0.026$ & $< 10^{-4}$ & $0.04$ & $0.026$ & Candidate  \\
 201565013.01 & $1.69$ &  - & $0.783$ & $7.3\times10^{-3}$ & $0.063$ & $0.07$ & $0.853$ & Candidate  \\
@@ -68,7 +68,6 @@ below 1\% threshold.}
 \tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
 \tablenotetext{a}{Despite low FPP, returned to candidate status 
 out of abundance of caution due to secondary star detection within or near photometric aperture.}
-\tablenotetext{b}{Declared a false positive due to noise modeling systematics (see \S\ref{sec:systematics}).}
-\tablenotetext{c}{Identified as planets by \citet{Crossfield15}.}
-\tablenotetext{d}{Identified as planets by \citet{Armstrong15b}.}
+\tablenotetext{b}{Identified as planets by \citet{Crossfield15}.}
+\tablenotetext{c}{Identified as planets by \citet{Armstrong15b}.}
 \end{deluxetable*}
