--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -61,8 +61,7 @@ Candidates are declared to be validated planets if FPP $< 0.01$.
 EB, BEB, and HEB refer to the three considered astrophysical 
 false positive scenarios, and the relative probability of 
 each is listed in the appropriate column.  Planets previously 
-identified in the literature are marked as planets even if FPP is not 
-below 1\% threshold.}
+identified in the literature are marked.}
 \tablenotetext{1}{Maximum depth of potential secondary eclipse signal.}
 \tablenotetext{2}{Whether adaptive optics observation is presented in this paper.}
 \tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
