--- a/exopapers.bib
+++ b/exopapers.bib
@@ -3259,6 +3259,20 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@MISC{isochrones,
+   author = {{Morton}, T.~D.},
+    title = "{isochrones: Stellar model grid package}",
+howpublished = {Astrophysics Source Code Library},
+     year = 2015,
+    month = mar,
+archivePrefix = "ascl",
+   eprint = {1503.010},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ascl.soft03010M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @BOOK{Jeffreys61,
    author = {{Jeffreys}, H.},
     title = "{Theory of Probability}",
@@ -5948,6 +5962,18 @@ archivePrefix = "arXiv",
     month = jul,
    volume = 474,
     pages = {653-654},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@MISC{vespa,
+   author = {{Morton}, T.~D.},
+    title = "{VESPA: False positive probabilities calculator}",
+howpublished = {Astrophysics Source Code Library},
+     year = 2015,
+    month = mar,
+archivePrefix = "ascl",
+   eprint = {1503.011},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ascl.soft03011M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
