--- a/ms.tex
+++ b/ms.tex
@@ -544,7 +544,7 @@ and fully automated, and thus easily applied in batch to a large
 number of candidates.
 
 In this work, we use
-\texttt{vespa}\footnote{\url{http://github.com/timothydmorton/vespa}},
+\texttt{vespa}\footnote{\url{http://github.com/timothydmorton/vespa}} \citep{vespa},
 a new publicly available, general-purpose implementation
 of the \citet{Morton12} procedure,
 to calculate false positive probabilities (FPPs) for each of these
