--- a/ms.tex
+++ b/ms.tex
@@ -1044,8 +1044,8 @@ JWST to probe planetary atmospheres.
 We have presented stellar parameters for all planet candidates systems identified by
 \paperit.
 We statistically validate \Nvalidated\ of the 36 candidates as bona fide planets, and we
-identify \Nfp\ as false positives.
-Of these planets, 3 have been previously validated in other works, while \Nvalnew\ are
+identify \Nfp\ as false positives, including two systematic false alarms.
+Of the planets, 4 have been previously validated in other works, while \Nvalnew\ are
 validated here for the first time.
 The systems not validated as planets or false positives remain as planet candidates.
 
