--- a/ms.tex
+++ b/ms.tex
@@ -359,7 +359,7 @@ In each step of our fitting process, we draw a value for $A_V$, calculate the ex
 in all bandpasses $A_X$ assuming the $R_V = 3.1$ reddening law of \citep{Fitzpatrick99}, 
 and then measure the likelihood of our model stellar fit to the observed apparent magnitudes.
 We apply a uniform prior ranging from zero to a maximum extinction value of 0.2 
-(a conservative upper limit for a field at such high Galactic latitude), and
+(a generous upper limit for a field at such high Galactic latitude), and
 marginalize over extinction in our final determination of stellar parameters.}
 
 Such a scheme enables us to infer the statistical uncertainties on the
